feat: add OrderProcessingDemo and LiveOrderProcessingDemo for enhanced e-commerce order processing examples with multi-level scope nesting